--- a/src/main/resources/templates/usr/home/fragment/index/popular.html
+++ b/src/main/resources/templates/usr/home/fragment/index/popular.html
@@ -29,7 +29,7 @@
         </a>
 
         <a th:if="${books.size > 0}"
-           href="/book/list"
+           href="/search/main"
            class="carousel-item w-32 flex justify-center">
 
             <div class="stats shadow w-40 flex">
