--- a/src/main/resources/templates/usr/underline/fragment/book/table.html
+++ b/src/main/resources/templates/usr/underline/fragment/book/table.html
@@ -1,6 +1,6 @@
 <table th:fragment="table(underlines, mcq)"
        th:if="${underlines.size > 0}"
-       class="mt-5 table w-full drop-shadow-lg">
+       class="mt-5 table w-full drop-shadow-lg mb-12">
 
     <thead>
     <tr>
