--- a/src/main/resources/templates/usr/search/fragment/question/search.html
+++ b/src/main/resources/templates/usr/search/fragment/question/search.html
@@ -1,13 +1,14 @@
 <form th:fragment="search(searchForm)"
       method="get" action="/search/question"
       th:object="${searchForm}"
+      class="w-64"
       onsubmit="JoinForm__submit(this); return false;">
 
-    <div class="form-control">
+    <div class="form-control w-full">
         <label class="input-group input-group-sm">
 
             <input type="text" th:field="*{input}" placeholder="검색어 입력"
-                   class="input input-bordered input-sm"/>
+                   class="input input-bordered input-sm w-full"/>
 
 
             <button class="btn btn-square btn-sm w-24">
