--- a/src/main/resources/templates/usr/underline/fragment/book/table.html
+++ b/src/main/resources/templates/usr/underline/fragment/book/table.html
@@ -1,6 +1,6 @@
 <table th:fragment="table(underlines, mcq)"
        th:if="${underlines.size > 0}"
-       class="mt-5 table w-full drop-shadow-lg mb-12">
+       class="mt-5 table w-full drop-shadow-lg">
 
     <thead>
     <tr>
@@ -17,7 +17,7 @@
         th:object="${underline.question}">
 
         <td>
-            <a th:text="*{category.name}" class="text-xs"
+            <a th:text="${underline.question.category.name}" class="text-xs"
                th:href="@{/underline/detail/{id}(id=${underline.id})}"></a>
         </td>
 
