--- a/src/main/resources/templates/usr/book/fragment/update/table.html
+++ b/src/main/resources/templates/usr/book/fragment/update/table.html
@@ -1,35 +1,45 @@
-<table th:fragment="table(underlines, mcq)"
+<table th:fragment="table(underlines, mcq, bookUpdateForm, books)"
        th:if="${underlines.size > 0}"
        class="mt-5 table w-80 drop-shadow-lg">
 
-  <thead>
-  <tr>
-    <td class="flex justify-between">
-      <div>문제 목록</div>
-      <div th:text="|총 ${underlines.size} 문제|"></div>
-    </td>
-  </tr>
-  </thead>
-
-  <tbody>
-  <tr class="hover flex w-80"
-      th:each="underline, loop : ${underlines}"
-      th:object="${underline.question}">
+    <thead>
+    <tr>
+        <td class="flex justify-between">
+            <div>문제 목록</div>
 
 
-    <td th:text="*{category.name}" class="text-[4px]"></td>
+            <select th:field="${bookUpdateForm.term}"
+                    class="select select-bordered select-xs w-fit max-w-xs">
 
-    <td th:text="*{name}" class="text-[4px] grow"></td>
+                <option value="0">선택 삭제</option>
+                <option th:each="book : ${books}"
+                        th:text="|${book.name} 에 복사|"
+                        th:value="${book.id}"></option>
+            </select>
+        </td>
+    </tr>
+    </thead>
 
-    <td th:text="|Lv.${underline.question.difficulty}|" class="text-[4px]"></td>
+    <tbody>
+    <tr class="hover flex w-80"
+        th:each="underline, loop : ${underlines}"
+        th:object="${underline.question}">
 
-    <td th:text="(*{type} == ${mcq})? '객관식':'주관식'" class="text-[4px]"></td>
 
-    <td class="">
-      <input type="checkbox" class="checkbox checkbox-primary checkbox-sm"/>
-    </td>
+        <td th:text="*{category.name}" class="text-[4px]"></td>
 
-  </tr>
-  </tbody>
+        <td th:text="*{name}" class="text-[4px] grow"></td>
+
+        <td th:text="|Lv.${underline.question.difficulty}|" class="text-[4px]"></td>
+
+        <td th:text="(*{type} == ${mcq})? '객관식':'주관식'" class="text-[4px]"></td>
+
+        <td>
+            <input type="checkbox" th:field="${bookUpdateForm.underlines}" th:value="${underline.id}"
+                   class="checkbox checkbox-primary checkbox-sm"/>
+        </td>
+
+    </tr>
+    </tbody>
 
 </table>
