feat: 검색 페이지 / 문제집 상세페이지 업데이트 / 문제집 풀기 구현 (#143)
* design: 문제, 카테고리 만들기 네비바에 추가

* fix: 커버사진 미리보기 기능 구현 실패

* feat: 문제집 이름으로 검색 기능 구현 완료

* feat: 태그 검색 기능 구현

* feat: category 검색 기능 구현 완료

* test: 태그, 이름 한번에 검색하는 기능 구현 / 테스트 완료

* test: tag, name 한번에 검색시 name 검색이 안되는 문제 발생

* test: 문제집, 카테고리, 문제 검색 기능 구현 / test 완료

* design: 메인 페이지 문제집 ui 업데이트

* design: main page ui update

* fix: 문제 상세페이지 안나오는 문제 해결

* design: 문제집 상세페이지 ui update

* design: 문제집 상세페이지 ui update

* feat: Book 에 author 필드 추가

* feat: Book, Question 검색 조건에 작성자 추가

* fix: Question 중복검색 문제 해결

* design: 카테고리 목록 선택시 문제 검색 페이지로 이동

* refactor: 사용안하는 method / html 파일 삭제

* feat: 문제집 상세페이지로 링크 설정 완료

* design: 문제집 상세페이지에 태그 추가

* css: 문제집 상세페이지 문제집 설명 text 가 안부서짐

* design: 밑줄 검색 페이지 검색페이지에 추가

* test: book 으로 playlist 생성 테스트 완료

* feat: 문제집 랜덤으로 풀기 기능 구현 완료

* feat: book update form ui 만드는중

* feat: book update form 구현 완료

--- a/src/main/resources/templates/usr/underline/fragment/book/table.html
+++ b/src/main/resources/templates/usr/underline/fragment/book/table.html
@@ -1,34 +1,42 @@
 <table th:fragment="table(underlines, mcq)"
-       class="mt-5 table w-full">
+       th:if="${underlines.size > 0}"
+       class="mt-5 table w-full drop-shadow-lg">
 
-  <thead>
-  </thead>
+    <thead>
+    <tr>
+        <td class="flex justify-between">
+            <div>문제 목록</div>
+            <div th:text="|총 ${underlines.size} 문제|"></div>
+        </td>
+    </tr>
+    </thead>
 
-  <tbody>
-  <tr class="hover flex"
-      th:each="underline, loop : ${underlines}"
-      th:object="${underline.question}">
+    <tbody>
+    <tr class="hover flex"
+        th:each="underline, loop : ${underlines}"
+        th:object="${underline.question}">
 
-    <td>
-      <a th:text="${loop.count}"  class="text-sm"
-         th:href="@{/underline/detail/{id}(id=${underline.id})}"></a>
-    </td>
+        <td>
+            <a th:text="${underline.question.category.name}" class="text-xs"
+               th:href="@{/underline/detail/{id}(id=${underline.id})}"></a>
+        </td>
 
-    <td class="w-40">
-      <a th:text="*{name}"  class="text-sm"
-         th:href="@{/underline/detail/{id}(id=${underline.id})}"></a>
-    </td>
+        <td>
+            <a th:text="*{name}" class="text-xs"
+               th:href="@{/underline/detail/{id}(id=${underline.id})}"></a>
+        </td>
 
-    <td class="grow">
-      <a th:href="@{/underline/detail/{id}(id=${underline.id})}">
-        <div th:replace="~{usr/question/fragment/detail/difficulty :: difficulty(${underline.question})}"></div>
-      </a>
-    </td>
-    <td>
-      <a th:text="(*{type} == ${mcq})? '객관식':'주관식'"
-         th:href="@{/underline/detail/{id}(id=${underline.id})}"></a>
-    </td>
-  </tr>
-  </tbody>
+        <td class="grow">
+            <a th:href="@{/underline/detail/{id}(id=${underline.id})}">
+                <div th:replace="~{usr/question/fragment/detail/difficulty :: difficulty(${underline.question})}"></div>
+            </a>
+        </td>
+
+        <td>
+            <a th:text="(*{type} == ${mcq})? '객관식':'주관식'" class="text-xs"
+               th:href="@{/underline/detail/{id}(id=${underline.id})}"></a>
+        </td>
+    </tr>
+    </tbody>
 
 </table>
