--- a/src/main/resources/templates/usr/book/top/list.html
+++ b/src/main/resources/templates/usr/book/top/list.html
@@ -1,20 +1,21 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title>문제집 목록</title></head>
+<head><title>나의 문제집 목록</title></head>
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center">
 
-    <form th:replace="~{usr/category/fragment/list/search :: search(${questionSearchForm})}"></form>
-    <table th:replace="~{usr/book/fragment/list/table :: table(${books})}"></table>
+
+    <a href="/book/create"
+       class="btn btn-outline btn-sm w-64 mb-3">문제집 만들기</a>
+
+
+    <table th:replace="~{usr/book/fragment/list/content :: content(${books})}"></table>
 
     <div th:if="${books.size eq 0}" class="flex justify-center">
         <div>아직 문제집이 없습니다.</div>
     </div>
 
-    <div th:if="${@rq.login}"
-         class="flex justify-end w-full">
-        <a href="/book/create"><i class="fa-regular fa-pen-to-square mr-5"></i></a>
-    </div>
+    <div class="mb-12"></div>
 
 </div>
 </html>
