--- a/src/main/resources/templates/usr/question/fragment/detail/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/nav.html
@@ -1,15 +1,17 @@
 <div th:fragment="nav(tags, question, underlineCreateForm, books)"
      class="mb-12 flex flex-col gap-5">
 
-    <div class="flex justify-center mt-5">
-        <span th:each="tag : ${tags}"
-              class="badge" th:text="|# ${tag.tag}  |"></span>
+    <div class="flex gap-2 flex-wrap w-64 justify-center m-5">
+        <div th:each="tag: ${tags}"
+             class="badge badge-xs">
+            <div th:text="|# ${tag.tag}|" class="text-[4px]"></div>
+        </div>
     </div>
 
     <div class="flex justify-center mt-3 mb-10 gap-5">
 
-        <a th:href="@{/question/list/{id}(id=${question.category.id})}">
-            <i class="fa-solid fa-chevron-left"></i></a>
+        <a th:href="@{/search/category/{id}(id=${question.category.id})}">
+            <i class="fa-solid fa-arrow-left-long"></i></i></a>
 
         <span th:replace="~{usr/question/fragment/detail/underline :: underline(${question}, ${underlineCreateForm}, ${books})}"></span>
 
