--- a/src/main/resources/templates/usr/search/fragment/category/content.html
+++ b/src/main/resources/templates/usr/search/fragment/category/content.html
@@ -1,4 +1,4 @@
-<table th:fragment="table(categories)"
+<table th:fragment="content(categories)"
        class="mt-5 table w-96">
 
     <thead>
@@ -11,15 +11,15 @@
 
         <td>
             <a th:text="*{name}"
-               th:href="@{/question/list/{id}(id=*{id})}"></a>
+               th:href="@{/search/category/{id}(id=*{id})}"></a>
         </td>
         <td class="grow">
             <a class="w-full"
-               th:href="@{/question/list/{id}(id=*{id})}"></a>
+               th:href="@{/search/category/{id}(id=*{id})}"></a>
         </td>
         <td>
             <a th:text="|*{questions.size} 문제|"
-               th:href="@{/question/list/{id}(id=*{id})}"></a>
+               th:href="@{/search/category/{id}(id=*{id})}"></a>
         </td>
     </tr>
     </tbody>
