--- a/src/main/resources/templates/usr/answer/top/result.html
+++ b/src/main/resources/templates/usr/answer/top/result.html
@@ -7,7 +7,7 @@
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-5 bg-base-200 mb-12">
     <div class="mt-5"/>
     <!-- 뒤로 가는 버튼 -->
-    <a href="javascript:history.back()" class="btn btn-primary mb-5">뒤로 가기</a>
+    <a href="/answer/lists" class="btn_back btn btn-primary mb-5">뒤로 가기</a>
 
 
     <!--
