feat: 채팅 1차 구현

--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -114,6 +114,10 @@
                 <span>통계</span>
             </li>
             <li><a href="/member/graph/point">포인트 변동 그래프</a></li>
+            <li class="menu-title mt-3">
+                <span>임시</span>
+            </li>
+            <li><a href="/chat">채팅</a></li>
         </ul>
     </div>
 
