feat: 문제집 수정 / 문제 복사, 삭제 기능 구현 (#146)
* design: 문제, 카테고리 만들기 네비바에 추가

* fix: 커버사진 미리보기 기능 구현 실패

* feat: 문제집 이름으로 검색 기능 구현 완료

* feat: 태그 검색 기능 구현

* feat: category 검색 기능 구현 완료

* test: 태그, 이름 한번에 검색하는 기능 구현 / 테스트 완료

* test: tag, name 한번에 검색시 name 검색이 안되는 문제 발생

* test: 문제집, 카테고리, 문제 검색 기능 구현 / test 완료

* design: 메인 페이지 문제집 ui 업데이트

* design: main page ui update

* fix: 문제 상세페이지 안나오는 문제 해결

* design: 문제집 상세페이지 ui update

* design: 문제집 상세페이지 ui update

* feat: Book 에 author 필드 추가

* feat: Book, Question 검색 조건에 작성자 추가

* fix: Question 중복검색 문제 해결

* design: 카테고리 목록 선택시 문제 검색 페이지로 이동

* refactor: 사용안하는 method / html 파일 삭제

* feat: 문제집 상세페이지로 링크 설정 완료

* design: 문제집 상세페이지에 태그 추가

* css: 문제집 상세페이지 문제집 설명 text 가 안부서짐

* design: 밑줄 검색 페이지 검색페이지에 추가

* test: book 으로 playlist 생성 테스트 완료

* feat: 문제집 랜덤으로 풀기 기능 구현 완료

* feat: book update form ui 만드는중

* feat: book update form 구현 완료

* feat: book tag 수정 안되는 문제 발생

* error: tag 수정 안되는 문제 해결해야됨

--- a/src/main/resources/templates/usr/underline/fragment/book/title.html
+++ b/src/main/resources/templates/usr/underline/fragment/book/title.html
@@ -40,7 +40,8 @@
 
             </div>
 
-            <div class="mb-3">
+            <div class="mb-3 w-full">
+
                 <p class="py-6 ml-3 mr-3 text-xs"
                    th:text="${book.about}"></p>
 
