--- a/src/main/resources/templates/usr/post/list.html
+++ b/src/main/resources/templates/usr/post/list.html
@@ -70,7 +70,7 @@
             </a>
         </li>
         <li class="join-item btn" th:if="${paging.hasPrevious() && paging.number > 0}" th:href="@{|?page=${paging.number-1}|}">
-            <a class="" th:href="@{|?page=${paging.number-1}|}"><</a>
+            <a class="" th:href="@{|?page=${paging.number-1}|}"></a>
         </li>
         <button th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
                 th:if="${page >= paging.number-5 and page <= paging.number+5}"
@@ -78,7 +78,7 @@
             <a th:text="${page+1}" th:href="@{|?page=${page}|}"></a>
         </button>
         <li class="join-item btn" th:classappend="${paging.hasNext()} ? 'disabled'" th:if="${paging.number < paging.totalPages - 1}">
-            <a class="" th:href="@{|?page=${paging.number+1}|}">></a>
+            <a class="" th:href="@{|?page=${paging.number+1}|}"></a>
         </li>
         <li class="join-item btn" th:classappend="${paging.hasNext()} ? 'disabled'">
             <a class="" th:href="@{|?page=${paging.totalPages - 1}|}">
