chore : 다른사람답변 정답인것만 보이게

--- a/src/main/resources/templates/usr/answer/fragment/comments/comment.html
+++ b/src/main/resources/templates/usr/answer/fragment/comments/comment.html
@@ -3,7 +3,8 @@
          th:each="answer, loop : ${answers}"
          th:object="${answer}">
 
-        <div class="card bg-neutral text-neutral-content">
+        <div th:if="${answer.result eq '정답'}"
+                class="card bg-neutral text-neutral-content">
             <div class="card-body">
                 <div class="card-text" style="white-space: pre-line;" th:text="${answer.content}"></div>
                 <div class="d-flex justify-content-end">
