design: 디자인 약간

--- a/src/main/resources/templates/usr/chat/chat.html
+++ b/src/main/resources/templates/usr/chat/chat.html
@@ -1,6 +1,6 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title>내가 쓴 답글</title></head>
+<head><title>채팅 - 웹소켓(삭제)</title></head>
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
 
