--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -117,7 +117,8 @@
             <li class="menu-title mt-3">
                 <span>임시</span>
             </li>
-            <li><a href="/chat">채팅</a></li>
+            <li><a href="/chat">채팅(웹소켓-삭제)</a></li>
+            <li><a href="/rooms">채팅(STOMP-임시)</a></li>
         </ul>
     </div>
 
