feat: 채팅 구현(임시 버전) (#147)
* feat: 채팅 1차 구현

* feat: STOMP 채팅 구현 완료 - 디자인 작업 및 약간의 로직 수정 필요

* design: 디자인 약간

--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -114,6 +114,11 @@
                 <span>통계</span>
             </li>
             <li><a href="/member/graph/point">포인트 변동 그래프</a></li>
+            <li class="menu-title mt-3">
+                <span>임시</span>
+            </li>
+            <li><a href="/chat">채팅(웹소켓-삭제)</a></li>
+            <li><a href="/rooms">채팅(STOMP-임시)</a></li>
         </ul>
     </div>
 
