feat: 첨부파일 다운로드 기능

--- a/src/main/resources/templates/usr/post/view.html
+++ b/src/main/resources/templates/usr/post/view.html
@@ -127,10 +127,10 @@
 
     <div class="post-content" th:utext="${post.content}"></div>
     <div class="attachment">
-      <span class="badge badge-primary" th:if="${post.fileUrl}">
-        첨부 파일
-        <a th:href="${post.fileUrl}" download th:text="${post.fileName}"></a>
-      </span>
+  <span class="badge badge-primary" th:if="${post.fileUrl}">
+    첨부 파일
+  </span>
+      <a th:if="${post.fileUrl}" th:href="@{/downloadFile/{fileName}(fileName=${post.fileName})}" th:text="${post.fileName}" download></a>
     </div>
 
     <div class="comment-list">
