feat: 게시글 첨부 파일 기능 (#148)
* feat: 마크다운 에디터 구현

* feat: view에서도 마크다운 적용

* feat: 파일 첨부 기능

* feat: 첨부파일 다운로드 기능

--- a/src/main/resources/templates/usr/post/view.html
+++ b/src/main/resources/templates/usr/post/view.html
@@ -81,7 +81,6 @@
       margin-bottom: 10px;
     }
 
-    /* 추가된 스타일 */
     .comment-input {
       display: flex;
     }
@@ -127,6 +126,12 @@
     <hr>
 
     <div class="post-content" th:utext="${post.content}"></div>
+    <div class="attachment">
+  <span class="badge badge-primary" th:if="${post.fileUrl}">
+    첨부 파일
+  </span>
+      <a th:if="${post.fileUrl}" th:href="@{/downloadFile/{fileName}(fileName=${post.fileName})}" th:text="${post.fileName}" download></a>
+    </div>
 
     <div class="comment-list">
       <h2 class="bg-base-200">댓글</h2>
