--- a/src/main/resources/templates/usr/chat/rooms.html
+++ b/src/main/resources/templates/usr/chat/rooms.html
@@ -5,28 +5,27 @@
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
-    <table class="table">
-        <tr>
-            <th>id</th>
-            <th>name</th>
-            <th>owner_username</th>
-            <th>createdAt</th>
-            <th>updatedAt</th>
-            <th>Enter</th>
-        </tr>
-        <tr th:each="chatRoom : ${chatRooms}">
-
-            <td th:text="${chatRoom.id}"></td>
-            <td th:text="${chatRoom.name}"></td>
-            <td th:text="${chatRoom.owner.username}"></td>
-            <td th:text="${chatRoom.createdAt}"></td>
-            <td th:text="${chatRoom.updatedAt}"></td>
-            <td>
-                <a th:href="@{/rooms/{id}(id=${chatRoom.id})}">Enter</a>
-            </td>
-        </tr>
-    </table>
-    <a href="/rooms/new" class="btn btn-link">새 문의 채팅 만들기</a>
+    <div class="max-w-2xl w-full px-4">
+        <div class="overflow-x-auto">
+            <table class="table">
+                <tr>
+                    <th>번호</th>
+                    <th>제목</th>
+                    <th>등록일</th>
+                    <th>입장</th>
+                </tr>
+                <tr th:each="chatRoom : ${chatRooms}">
+                    <td th:text="${chatRoom.id}"></td>
+                    <td class="truncate-text" th:text="${chatRoom.name}"></td>
+                    <td th:text="${#temporals.format(chatRoom.createdAt, 'YY-MM-dd')}"></td>
+                    <td>
+                        <a class="btn btn-primary btn-sm" th:href="@{/rooms/{id}(id=${chatRoom.id})}">입장</a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <a href="/rooms/new" class="btn btn-link">새 문의 채팅 만들기</a>
+    </div>
 
     <div class="mt-5"></div>
     <div class="mt-5"></div>
