design: 채팅방 디자인 구현중

--- a/src/main/resources/templates/usr/chat/room.html
+++ b/src/main/resources/templates/usr/chat/room.html
@@ -7,6 +7,7 @@
     <script th:inline="javascript">
         const chatRoomId = /*[[${chatRoom.id}]]*/ '';
         const token = /*[[${_csrf.token}]]*/ '';
+        const myUsername = /*[[${me.username}]]*/ '';
     </script>
     <script th:src="@{/app.js}"></script>
 </head>
