--- a/src/main/resources/templates/usr/chat/room.html
+++ b/src/main/resources/templates/usr/chat/room.html
@@ -15,26 +15,8 @@
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
-    <table class="table">
-        <tr>
-            <th>id</th>
-            <th>name</th>
-            <th>owner_username</th>
-            <th>createdAt</th>
-            <th>updatedAt</th>
-            <th>Enter</th>
-        </tr>
-        <tr>
-            <td th:text="${chatRoom.id}"></td>
-            <td th:text="${chatRoom.name}"></td>
-            <td th:text="${chatRoom.owner.username}"></td>
-            <td th:text="${chatRoom.createdAt}"></td>
-            <td th:text="${chatRoom.updatedAt}"></td>
-        </tr>
-    </table>
-
     <div class="container">
-        <h3 class=" text-center">Messaging</h3>
+        <h3 class="text-center" th:text="${chatRoom.name}"></h3>
         <div class="messaging">
             <div class="inbox_msg">
                 <div class="mesgs">
@@ -46,22 +28,12 @@
             <div class="type_msg">
                 <div class="input_msg_write">
                     <form class="chat__write-message" onsubmit="ChatWriteMessage(this); return false;">
-                        <input type="text" class="write_msg" placeholder="내용을 입력해주세요." name="content">
-                        <input type="submit" value="작성">
+                        <input type="text" class="input input-bordered w-70" placeholder="내용을 입력해주세요." name="content">
+                        <input type="submit" class="btn btn-outline w-20" value="작성">
                     </form>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="overflow-y" style="max-height: 500px;">
-        <div class="chat chat-start">
-            <div class="chat__message-ul"></div>
-        </div>
-        <form class="chat__write-message" onsubmit="ChatWriteMessage(this); return false;">
-            <input type="text" class="write_msg" placeholder="내용을 입력해주세요." name="content">
-            <input type="submit" value="작성">
-        </form>
     </div>
 
     <div class="mt-5"></div>
