--- a/src/main/resources/templates/usr/chat/room.html
+++ b/src/main/resources/templates/usr/chat/room.html
@@ -15,6 +15,9 @@
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
+    <div>
+        <a class="btn btn-link" href="/rooms">돌아가기</a>
+    </div>
     <div class="container">
         <h3 class="text-center" th:text="${chatRoom.name}"></h3>
         <div class="messaging">
