--- a/src/main/resources/templates/usr/chat/room.html
+++ b/src/main/resources/templates/usr/chat/room.html
@@ -7,6 +7,7 @@
     <script th:inline="javascript">
         const chatRoomId = /*[[${chatRoom.id}]]*/ '';
         const token = /*[[${_csrf.token}]]*/ '';
+        const myUsername = /*[[${me.username}]]*/ '';
     </script>
     <script th:src="@{/app.js}"></script>
 </head>
@@ -14,28 +15,29 @@
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
-    <table class="table">
-        <tr>
-            <th>id</th>
-            <th>name</th>
-            <th>owner_username</th>
-            <th>createdAt</th>
-            <th>updatedAt</th>
-            <th>Enter</th>
-        </tr>
-        <tr>
-            <td th:text="${chatRoom.id}"></td>
-            <td th:text="${chatRoom.name}"></td>
-            <td th:text="${chatRoom.owner.username}"></td>
-            <td th:text="${chatRoom.createdAt}"></td>
-            <td th:text="${chatRoom.updatedAt}"></td>
-        </tr>
-    </table>
-    <form class="chat__write-message" onsubmit="ChatWriteMessage(this); return false;">
-        <input type="text" placeholder="내용을 입력해주세요." name="content">
-        <input type="submit" value="작성">
-    </form>
-    <li class="chat__message-ul"></li>
+    <div>
+        <a class="btn btn-link" href="/rooms">돌아가기</a>
+    </div>
+    <div class="container">
+        <h3 class="text-center" th:text="${chatRoom.name}"></h3>
+        <div class="messaging">
+            <div class="inbox_msg">
+                <div class="mesgs">
+                    <div class="msg_history">
+                        <div class="chat__message-ul"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="type_msg">
+                <div class="input_msg_write">
+                    <form class="chat__write-message" onsubmit="ChatWriteMessage(this); return false;">
+                        <input type="text" class="input input-bordered w-70" placeholder="내용을 입력해주세요." name="content">
+                        <input type="submit" class="btn btn-outline w-20" value="작성">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="mt-5"></div>
     <div class="mt-5"></div>
