--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -115,10 +115,10 @@
             </li>
             <li><a href="/member/graph/point">포인트 변동 그래프</a></li>
             <li class="menu-title mt-3">
-                <span>임시</span>
+                <span>문의</span>
             </li>
-            <li><a href="/chat">채팅(웹소켓-삭제)</a></li>
-            <li><a href="/rooms">채팅(STOMP-임시)</a></li>
+            <li><a href="#">쪽지 문의(작업중)</a></li>
+            <li><a href="/rooms">실시간 문의</a></li>
         </ul>
     </div>
 
