--- a/src/main/resources/templates/usr/chat/room.html
+++ b/src/main/resources/templates/usr/chat/room.html
@@ -17,6 +17,7 @@
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
     <div>
         <a class="btn btn-link" href="/rooms">돌아가기</a>
+        <a class="btn btn-link" th:href="@{/rooms/delete/{id}(id=${chatRoom.id})}">삭제하기</a>
     </div>
     <div class="container">
         <h3 class="text-center" th:text="${chatRoom.name}"></h3>
