design: 디자인 수정

--- a/src/main/resources/templates/usr/member/comment.html
+++ b/src/main/resources/templates/usr/member/comment.html
@@ -24,7 +24,7 @@
                     <th>
                         <a th:href="@{'/post/view/' + ${comment.post.id}}" th:text="${comment.post.id}"></a>
                     </th>
-                    <td>
+                    <td class="truncate-text">
                         <a th:href="@{'/post/view/' + ${comment.post.id}}" th:text="${comment.post.title}"></a>
                     </td>
                     <td class="truncate-text">
