feat: 문의 쪽지 기능 구현 시작

--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -117,7 +117,7 @@
             <li class="menu-title mt-3">
                 <span>문의</span>
             </li>
-            <li><a href="#">쪽지 문의(작업중)</a></li>
+            <li><a href="/note">쪽지 문의(작업중)</a></li>
             <li><a href="/rooms">실시간 문의</a></li>
         </ul>
     </div>
