--- a/src/main/resources/templates/usr/note/send.html
+++ b/src/main/resources/templates/usr/note/send.html
@@ -6,7 +6,14 @@
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
     <form th:action method="POST" class="p-10 flex flex-col gap-4">
-        <textarea class="textarea textarea-accent textarea-lg w-full max-w-xs" name="content" placeholder="문의 내용을 입력해주세요."></textarea>
+        <label class="label flex flex-col">
+            <span class="label-text">제목</span>
+            <input type="text" name="title" class="input input-bordered w-full max-w-xs" placeholder="제목을 입력해주세요.">
+        </label>
+        <label class="label flex flex-col">
+            <span class="label-text">내용</span>
+            <textarea class="textarea textarea-bordered w-full max-w-xs" name="content" placeholder="내용을 입력해주세요."></textarea>
+        </label>
         <input type="submit" class="btn" value="보내기">
     </form>
 
