--- a/src/main/resources/templates/usr/note/sendList.html
+++ b/src/main/resources/templates/usr/note/sendList.html
@@ -1,6 +1,6 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title>문의 쪽지 보내기</title></head>
+<head><title>보낸 쪽지함</title></head>
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
 
@@ -14,17 +14,17 @@
                     <th>등록일</th>
                     <th>보기</th>
                 </tr>
-                <tr th:each="note : ${notes}">
+                <tr th:if="${!note.deleteSender}" th:each="note : ${notes}">
                     <td th:text="${note.id}"></td>
                     <td class="truncate-text" th:text="${note.title}"></td>
                     <td th:text="${#temporals.format(note.createDate, 'YY-MM-dd')}"></td>
                     <td>
-<!--                        <a class="btn btn-primary btn-sm" th:href="@{/rooms/{id}(id=${chatRoom.id})}">확인</a>-->
+                        <a class="btn btn-primary btn-sm" th:href="@{/note/detail/{noteId}(noteId=${note.id})}">확인</a>
                     </td>
                 </tr>
             </table>
         </div>
-        <a href="/note/send" class="btn btn-link">새 문의 보내기</a>
+        <a href="/note/send" class="btn btn-link">새 쪽지 보내기</a>
     </div>
 
     <div class="mt-5"></div>
